RESOLVED FIXED152916
B3 incorrectly turns NotEqual(bool, 1) into Equal(bool, 1) instead of Equal(bool, 0)
https://bugs.webkit.org/show_bug.cgi?id=152916
Summary B3 incorrectly turns NotEqual(bool, 1) into Equal(bool, 1) instead of Equal(b...
Filip Pizlo
Reported 2016-01-08 12:02:48 PST
Patch forthcoming.
Attachments
the patch (1.57 KB, patch)
2016-01-08 12:04 PST, Filip Pizlo
mark.lam: review+
Filip Pizlo
Comment 1 2016-01-08 12:04:03 PST
Created attachment 268568 [details] the patch
Filip Pizlo
Comment 2 2016-01-08 12:04:54 PST
Comment on attachment 268568 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=268568&action=review > Source/JavaScriptCore/b3/B3ReduceStrength.cpp:139 > - > + I'll revert.
Mark Lam
Comment 3 2016-01-08 12:06:02 PST
Comment on attachment 268568 [details] the patch r=me
Filip Pizlo
Comment 4 2016-01-08 12:15:18 PST
Note You need to log in before you can comment on or make changes to this bug.