B3 incorrectly turns NotEqual(bool, 1) into Equal(bool, 1) instead of Equal(bool, 0) https://bugs.webkit.org/show_bug.cgi?id=152916

Reviewed by Mark Lam.

This was causing a failure in an ancient DFG layout test. Thanks, ftl-eager-no-cjit!

This reduces the number of failures from 27 to 25.

* b3/B3ReduceStrength.cpp:



Canonical link: https://commits.webkit.org/170991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194777 268f45cc-cd09-0410-ab3c-d52691b4dbfc